home-cluster/plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plane
  labels:
    pod-security.kubernetes.io/enforce: baseline
